test/types/enum/paramEnumCast.good
paramEnumCast.chpl:6: In function 'testEnum':
paramEnumCast.chpl:19: error: Initializing parameter 'i' to value not known at compile time
paramEnumCast.chpl:41: warning: enum->int cast was a surprise for decline
paramEnumCast.chpl:6: In function 'testEnum':
paramEnumCast.chpl:23: error: Initializing parameter 'e3' to value not known at compile time
paramEnumCast.chpl:41: warning: int->enum cast was a surprise for decline
paramEnumCast.chpl:6: In function 'testEnum':
paramEnumCast.chpl:19: error: can't cast from an abstract enum ('color') to int(64)
